force-app/main/default/objects/Supplier__c/Supplier__c.object-meta.xml
<CustomObject>
    <description>It is used to Store Supplier Details</description>
    <label>Supplier</label>
    <nameField>
        <displayFormat>SUP-{0000}</displayFormat>
        <label>Supplier Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Suppliers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>