force-app/main/default/objects/Supplier__c/fields/Contract_Expiry_Status__c.field-meta.xml
<CustomField>
    <fullName>Contract_Expiry_Status__c</fullName>
    <formula>IF(( DAYOFYEAR( TODAY() ) - DAYOFYEAR( Contract_End_Date__c )) &gt;= 31,&quot;Active&quot;,  IF(( DAYOFYEAR( TODAY() ) - DAYOFYEAR( Contract_End_Date__c )) &gt;= 0, &quot;Expiring Soon&quot;, &quot;Expired&quot;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Expiry Status</label>
    <type>Text</type>
</CustomField>