force-app/main/default/objects/Supplier__c/fields/Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Start_Date__c</fullName>
    <description>It is used to find the Contract Start Date</description>
    <label>Contract Start Date</label>
    <type>Date</type>
</CustomField>