force-app/main/default/objects/Supplier__c/fields/Is_Preferred_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Is_Preferred_Supplier__c</fullName>
    <defaultValue>false</defaultValue>
    <description>It is used to find preferred Supplier</description>
    <label>Is Preferred Supplier</label>
    <type>Checkbox</type>
</CustomField>