force-app/main/default/objects/Supplier__c/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <description>It is used to find  Delivered in How any days</description>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Immediate</fullName>
            </value>
            <value>
                <fullName>15 Days</fullName>
            </value>
            <value>
                <fullName>30 Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>