force-app/main/default/objects/Supplier__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <description>It is used to find performance of the Supplier</description>
    <label>Rating</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>