force-app/main/default/objects/Supplier__c/fields/Total_Products_Supplied__c.field-meta.xml
<CustomField>
    <fullName>Total_Products_Supplied__c</fullName>
    <description>It is used to find how many products supplied</description>
    <label>Total Products Supplied</label>
    <summaryForeignKey>Inventory_Transaction__c.Supplier__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>