force-app/main/default/objects/Supplier__c/fields/Total_Supply_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Supply_Value__c</fullName>
    <description>It is used to find the amount of total supply data</description>
    <label>Total Supply Value</label>
    <summarizedField>Inventory_Transaction__c.Total_Amount__c</summarizedField>
    <summaryForeignKey>Inventory_Transaction__c.Supplier__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>